<resources>
    <string name="app_name">Sebo Books</string>

    <!-- Menu  -->
    <string name="home">Home</string>
    <string name="login"> Login</string>
    <string name="logout"> Logout</string>
    <string name="books">Sell Book</string>
    <string name="bookList">Books List</string>
    <string name="exit">Exit</string>

    <!-- Login  -->
    <string name="headerTextCustLogIn">Customer Login </string>

    <!-- Registration  -->
    <string name="headerTextRegistration">Register Your Details</string>


    <!--String for Customer Activity-->
    <string name="customerTxtVew">Please Complete the info </string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="zip">M1M3M6</string>
    <string name="creditCardNumber">Credit Card Number</string>
    <string name="expDate">Expire Date</string>
    <string name="expDateFormat">MMYY</string>
    <string name="phoneNo">Phone Number</string>
    <string name="phoneNoFormat">6472142145</string>
    <string name="please_fill_book_info_to_sell">Please fill Book info for Sell</string>
    <string name="enter_book_s_title">Enter Book\'s title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_description_of_books">Enter Description of Books</string>
    <string name="isbn">ISBN</string>
    <string name="publisher">Publisher</string>
    <string name="edition">Edition</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>

</resources>
